; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-engine.c_rpc_execute_delays.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyfast/extr_copyfast-engine.c_rpc_execute_delays.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.connection = type { i32 }
%struct.rpc_delays = type { i32, i32 }

@.str = private unnamed_addr constant [22 x i8] c"rpc_delays: len = %d\0A\00", align 1
@STATS = common dso_local global %struct.TYPE_4__* null, align 8
@SLOW_REQUEST_DELAY = common dso_local global i32 0, align 4
@MEDIUM_REQUEST_DELAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpc_execute_delays(%struct.connection* %0, %struct.rpc_delays* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.connection*, align 8
  %6 = alloca %struct.rpc_delays*, align 8
  %7 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %5, align 8
  store %struct.rpc_delays* %1, %struct.rpc_delays** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @vkprintf(i32 2, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* %7, align 4
  %11 = sext i32 %10 to i64
  %12 = icmp ne i64 %11, 4
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %26

14:                                               ; preds = %3
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @STATS, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  %20 = load %struct.rpc_delays*, %struct.rpc_delays** %6, align 8
  %21 = getelementptr inbounds %struct.rpc_delays, %struct.rpc_delays* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* @SLOW_REQUEST_DELAY, align 4
  %23 = load %struct.rpc_delays*, %struct.rpc_delays** %6, align 8
  %24 = getelementptr inbounds %struct.rpc_delays, %struct.rpc_delays* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* @MEDIUM_REQUEST_DELAY, align 4
  store i32 0, i32* %4, align 4
  br label %26

26:                                               ; preds = %14, %13
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @vkprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
